# ici-image-editor

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/icons/: add.ici  anchor_bl.ici  anchor_br.ici  anchor_c.ici  anchor_tl.ici  anchor_tr.ici  check.ici  circle.ici  copy.ici  ellipse.ici  fill.ici  line.ici  pencil.ici  play_pause.ici  rect.ici  remove.ici  warning.ici
assets/palettes/: dos.pal  gb.pal  pico.pal  vic_20.pal  zx_spectrum.pal
src/: main.rs  palettes.rs
src/image/: mod.rs  resize.rs  trim.rs
src/scenes/: editor.rs  editor_ui.rs  menu.rs  mod.rs  new_editor.rs  new_image_dialog.rs  palette_dialog.rs  resize_dialog.rs  save_palette_dialog.rs  simplify_dialog.rs
src/ui/: canvas.rs  edit_history.rs  image_fill.rs  mod.rs  palette.rs  preview.rs  timeline.rs
