[package]
name = "image-editor"
version = "0.4.1"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Simple image editor for ICI files"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/ici-image-editor"
readme = "README.md"
homepage = "https://github.com/emmabritton/ici-image-editor"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
pixels-graphics-lib = { version= "0.16.0", default-features = false, features = ["window_prefs", "scenes"] }
color-eyre = "0.6.2"
log = "0.4.20"
directories = "5.0.1"
env_logger = "0.11.3"
ron = "0.8.1"
serde = { version = "1.0.194", features = ["derive"] }
fnv = "1.0.3"
rfd = "0.14.0"