[package]
name = "image-editor"
version = "0.7.1"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Simple image editor for ICI files"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/ici-image-editor"
readme = "README.md"
homepage = "https://github.com/emmabritton/ici-image-editor"
publish = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
pixels-graphics-lib = { path="../rust-graphics-lib", default-features = false, features = ["window_prefs", "scenes", "images", "pixels"] }
color-eyre = "0.6.2"
log = "0.4.21"
directories = "5.0.1"
env_logger = "0.11.5"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
fnv = "1.0.7"
rfd = "0.15.0"
image_lib = {  package = "image", version = "0.25.1" }